internal/testdata/compileerror/compileerror.go
package compileerror

type myUnion struct {
	a undefined
	b string
}
